<resources>
    <string name="app_name">Sunshine</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map">Show location on map</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="location_header">Location</string>
    <string name="others_header">Others</string>

    <!-- Location Preferences -->
    <string name="zip_code_title">Zip code</string>
    <string name="zip_code_key" translatable="false">zip_code</string>
    <string name="country_code_title">Country code</string>
    <string name="country_code_key" translatable="false">country_code</string>

    <!-- Others Preferences -->
    <string name="unit_title">Weather units</string>
    <string name="unit_key" translatable="false">unit</string>
    <string name="unit_metric">metric</string>
    <string name="unit_imperial">imperial</string>
</resources>
